this is version with org pages

--- a/chatapp_test1/lib/l10n/intl_hi.arb
+++ b/chatapp_test1/lib/l10n/intl_hi.arb
@@ -1,45 +1,45 @@
 {
-  "appTitle": "ग्रोपिए",
-  "loginSlogan": "वे क्या बात कर रहे हैं यह देखने के लिए अभी लॉग इन करें!",
-  "Email": "ईमेल",
-  "EmailValidation": "कृपया एक मान्य ईमेल पता प्रवेश करें",
-  "Password": "पासवर्ड",
-  "PasswordValidation": "पासवर्ड कम से कम 6 अंकों का होना चाहिए",
-  "SignIn": "साइन इन करें",
-  "DontHaveAccount": "अकाउंट नहीं है?",
-  "RegisterHere": "यहां रजिस्टर करें",
+  "appTitle": "ଗ୍ରୁପି",
+  "loginSlogan": "ସେମାନେ କ’ଣ କହୁଛନ୍ତି ଦେଖିବା ପାଇଁ ବର୍ତ୍ତମାନ ଲଗ୍ଇନ୍ କରନ୍ତୁ!",
+  "Email": "ଇମେଲ୍",
+  "EmailValidation": "ଦୟାକରି ଏକ ବୈଧ ଇମେଲ୍ ପ୍ରବେଶ କରନ୍ତୁ",
+  "Password": "ପାସୱାର୍ଡ",
+  "PasswordValidation": "ପାସୱାର୍ଡ ଅତିକମରେ ୬ ଅକ୍ଷର ହେବା ଜରୁରୀ |",
+  "SignIn": "ସାଇନ୍ ଇନ୍ କରନ୍ତୁ",
+  "DontHaveAccount": "ଆକାଉଣ୍ଟ୍ ନାହିଁ କି?",
+  "RegisterHere": "ଏଠାରେ ରେଜିଷ୍ଟର କରନ୍ତୁ",
 
-  "registerSlogan": "चैट और एक्सप्लोर करने के लिए अभी अपना अकाउंट बनाएं",
-  "fullName": "पूरा नाम",
-  "nameValidation": "नाम खाली नहीं हो सकता",
-  "register": "रजिस्टर करें",
-  "haveAccount": "क्या आपके पास पहले से एक अकाउंट मौजूद है? ",
-  "loginNow": "अब प्रवेश करें",
+  "registerSlogan": "ଚାଟ୍ ଏବଂ ଏକ୍ସପ୍ଲୋର୍ କରିବାକୁ ବର୍ତ୍ତମାନ ଆପଣଙ୍କର ଆକାଉଣ୍ଟ୍ ବନାନ୍ତୁ |",
+  "fullName": "ପୁରା ନାମ",
+  "nameValidation": "ନାମ ଖାଲି ହୋଇପାରିବ ନାହିଁ |",
+  "register": "ରେଜିଷ୍ଟର କରନ୍ତୁ",
+  "haveAccount": "ପୂର୍ବରୁ ଏକ ଆକାଉଣ୍ଟ୍ ଅଛି କି?",
+  "loginNow": "ଲଗ୍ଇନ୍ କରନ୍ତୁ",
 
-  "groups": "समूह",
-  "profile": "प्रोफ़ाइल",
-  "logout": "लॉग आउट",
-  "reallyLogout": "क्या आप निश्चित रूप से लॉगआउट कर रहे हैं?",
-  "chooseLanguage":"एक भाषा चुनें",
-  "langChanged": "भाषा सफलतापूर्वक बदल गई!",
-  "language": "भाषा",
-  "createAGroup": "एक समूह बनाएं",
-  "cancle": "रद्द करें",
-  "groupCreated": "समूह सफलतापूर्वक बनाया गया।",
-  "create": "निर्माण",
-  "createGroupDesc": "आप किसी समूह में शामिल नहीं हुए हैं, समूह बनाने के लिए ऐड आइकन पर टैप करें या शीर्ष खोज बटन से भी खोजें",
+  "groups": "ଗୋଷ୍ଠୀ",
+  "profile": "ପ୍ରୋଫାଇଲ୍",
+  "logout": "ଲଗ୍ ଆଉଟ୍",
+  "reallyLogout": "ଆପଣ ଲଗଆଉଟ୍ କରିବାକୁ ନିଶ୍ଚିତ କି?",
+  "chooseLanguage":"ଏକ ଭାଷା ବାଛନ୍ତୁ",
+  "langChanged": "ଭାଷା ସଫଳତାର ସହିତ ବଦଳିଗଲା!",
+  "language": "ଭାଷା",
+  "createAGroup": "ଏକ ଗୋଷ୍ଠୀ ବନାନ୍ତୁ",
+  "cancle": "ବାତିଲ୍ କରନ୍ତୁ |",
+  "groupCreated": "ଗୋଷ୍ଠୀ ସଫଳତାର ସହିତ ବନା ହେଲା |",
+  "create": "ବନାନ୍ତୁ",
+  "createGroupDesc": "ଆପଣ କୈ‌।ଣସି ଗୋଷ୍ଠୀରେ ଯୋଗ ଦେଇ ନାହାଁନ୍ତି |, ଏକ ଗୋଷ୍ଠୀ ସୃଷ୍ଟି କରିବାକୁ ଆଡ୍ ଆଇକନ୍ ଉପରେ ଟ୍ୟାପ୍ କରନ୍ତୁ କିମ୍ବା ଟପ୍ ସର୍ଚ୍ଚ ବଟନ୍ ରୁ ସନ୍ଧାନ କରନ୍ତୁ |",
 
-  "search": "खोज",
-  "searchGroup": "खोज समूह...",
-  "groupJoined": "सफलतापूर्वक समूह में शामिल हो गए",
-  "groupLeft": "समूह छोड़ दिया",
-  "joined": "शामिल हो गए",
-  "joinNow": "अब सम्मिलित हों",
-  "displayAdmin": "एडमिन:",
+  "search": "ସନ୍ଧାନ",
+  "searchGroup": "ଗୋଷ୍ଠୀ ଖୋଜନ୍ତୁ",
+  "groupJoined": "ସଫଳତାର ସହିତ ଗୋଷ୍ଠୀରେ ଯୋଗ ଦେଲେ |",
+  "groupLeft": "ଗୋଷ୍ଠୀ ଛାଡିଲେ |",
+  "joined": "ଯୋଗଦାନ",
+  "joinNow": "ଏବେ ଯୋଗଦିଅ",
+  "displayAdmin": "ଆଡମିନି:",
 
-  "groupInfo": "समूह जानकारी",
-  "exit": "निकास",
-  "exitText": "क्या आप समूह से बाहर निकलने के लिए निश्चित हैं?",
+  "groupInfo": "ଗୋଷ୍ଠୀ ସୂଚନା",
+  "exit": "ପ୍ରସ୍ଥାନ",
+  "exitText": "ଆପଣ ଗୋଷ୍ଠୀ ଛାଡିବାକୁ ନିଶ୍ଚିତ କି?",
 
-  "groupTileSubTitle": "बातचीत में शामिल हों "
+  "groupTileSubTitle": "ବାର୍ତ୍ତାଳାପରେ ଯୋଗ ଦିଅନ୍ତୁ"
 }
